# Scientific-computing-MCP

./: ..gitignore.un~  .dockerignore  .gitignore  .gitignore~  Caddyfile  Dockerfile  README.md  docker-compose.yml  install_log.txt  pyproject.toml  requirements.txt
Scientific_app/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
Scientific_app/app/: build.gradle.kts  proguard-rules.pro
Scientific_app/app/src/main/: AndroidManifest.xml
Scientific_app/app/src/main/java/com/scicalc/agent/: MainActivity.kt
Scientific_app/app/src/main/java/com/scicalc/agent/agent/: AgentOrchestrator.kt
Scientific_app/app/src/main/java/com/scicalc/agent/data/: AppSettings.kt  Models.kt
Scientific_app/app/src/main/java/com/scicalc/agent/data/llm/: LlmClient.kt
Scientific_app/app/src/main/java/com/scicalc/agent/data/mcp/: McpClient.kt  McpJson.kt
Scientific_app/app/src/main/java/com/scicalc/agent/ui/: ChatScreen.kt  ChatViewModel.kt  SettingsScreen.kt
Scientific_app/app/src/main/res/values/: strings.xml  themes.xml
k8s/: deployment.yaml  ingress.yaml  service.yaml
kiro_gateway/: .env.example  Dockerfile  README.md  app.py  kiro-mcp.json
scripts/: local_check.py  smoke_test.py
src/scicalc_mcp/: __init__.py  safe_eval.py  server.py
src/scicalc_mcp/tools/: __init__.py  dataframe.py  linear_algebra.py  plotting.py  scientific.py  statistics.py
