[project]
name = "scicalc-mcp"
version = "0.1.0"
description = "MCP server providing mathematics and scientific computing tools (NumPy, pandas, SciPy, Matplotlib)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.scripts]
scicalc-mcp = "scicalc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scicalc_mcp"]
